changed some html

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -67,7 +67,7 @@
                     </ul>
 
                     <span class="navbar-text text-muted">
-                        Track your games with ease
+                        Track your games with ease with this game tracker!
                     </span>
                 </div>
             </div>
