--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
-{% load static %} {% url 'home' as home_url %}
-
+{% load static %} 
+{% url 'home' as home_url %}
+{% url 'about' as about_url %}
 <!DOCTYPE html>
 <html lang="en" class="h-100">
     <head>
@@ -57,10 +58,19 @@
                             <a
                                 class="nav-link {% if request.path == home_url %}active{% endif %}"
                                 href="{% url 'home' %}"
-                            >
-                                Home
+                            >Home
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link
+                                {% if request.path == about_url %}active{%endif%}"
+                                aria-current="page"
+                                href="{% url 'about' %}"
+                                >About</a
+                            >
+                            </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="#">Add Game</a>
                         </li>
