--- a/game/templates/game/game_list.html
+++ b/game/templates/game/game_list.html
@@ -4,13 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Views Part 1</title>
+        <title>Game List</title>
     </head>
 
     <body>
+        
         <h1>Game list</h1>
         {% for game in object_list %}
-        <h2>{{game.user}}</h2>
+        <h2>{{game.name}}</h2>
         <p>{{game.name}}</p>
         <p>{{game.get_genre_display}}</p>
         {% endfor %}
