--- a/game/templates/game/game_post.html
+++ b/game/templates/game/game_post.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 
+<!-- Masthead with static image -->
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
@@ -9,19 +11,14 @@
                 <h1 class="post-title">{{ game.name }}</h1>
                 <p class="post-subtitle">Added by: {{ game.user.username }}</p>
             </div>
-
-            <div class="d-none d-md-block col-md-6 masthead-image">
-                {% if game.image %}
-                    <img src="{{ game.image.url }}" class="scale" alt="{{ game.name }}">
-                {% else %}
-                    <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
-                {% endif %}
+            <div class="col-md-6 masthead-image d-none d-md-block">
+                <img src="{% static 'images/game.jpg' %}" class="scale" alt="{{ game.name }}">
             </div>
         </div>
     </div>
 </div>
 
-
+<!-- Game Details -->
 <div class="container">
     <div class="row">
         <div class="col card mb-4 mt-3 left top">
@@ -35,16 +32,66 @@
                     <strong>Hours Played:</strong> {{ game.hours_played }}<br>
                 </p>
 
-                {% if game.notes %}
                 <hr>
-                <h5>Your Notes:</h5>
-                <p>{{ game.notes }}</p>
-                {% endif %}
 
-            </div>
-        </div>
+                <!-- Displaying count of comments -->
+                <div class="row">
+                    <div class="col-12">
+                        <strong class="text-secondary">
+                            <i class="far fa-comments"></i> {{ comment_count }}
+                        </strong>
+                    </div>
+                    <div class="col-12">
+                        <hr>
+                    </div>
+                </div>
+
+                <!-- Displaying Comments -->
+                <div class="row">
+                    <div class="col-md-8 card mb-4 mt-3">
+                        <h3>Comments:</h3>
+                        <div class="card-body">
+                            {% for comment in comments %}
+                            <div class="p-2 comments">
+                                <p class="font-weight-bold">
+                                    {{ comment.user.username }}
+                                    <span class="font-weight-normal">{{ comment.created_at }}</span> wrote:
+                                </p>
+                                <div id="comment{{ comment.id }}">
+                                    {{ comment.body|linebreaks }}
+                                </div>
+                            </div>
+                            {% empty %}
+                                <p>You have not written any notes for this game yet.</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                     <!-- Creating New Comments -->
+    <div class="col-md-4 card mb-4 mt-3">
+      <div class="card-body">
+        {% if user.is_authenticated %}
+        <h3>Leave a comment:</h3>
+        <p>Posting as: {{ user.username }}</p>
+        <form id="commentForm" method="post"
+          style="margin-top: 1.3em;">
+          {{ comment_form | crispy }}
+          {% csrf_token %}
+          <button id="submitButton" type="submit"
+            class="btn btn-signup btn-lg">Submit</button>
+        </form>
+        {% else %}
+        <p>Log in to leave a comment</p>
+        {% endif %}
+      </div>
     </div>
-</div>
+                </div>
+
+            </div> <!-- end card-body -->
+        </div> <!-- end card -->
+    </div> <!-- end row -->
+</div> <!-- end container -->
 
 {% endblock content %}
+
+
 
