--- a/game/templates/game/game_post.html
+++ b/game/templates/game/game_post.html
@@ -1,97 +1,55 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+
 {% block content %}
 
-<!-- Masthead with static image -->
-<div class="masthead">
-    <div class="container">
-        <div class="row g-0">
-            <div class="col-md-6 masthead-text">
-                <h1 class="post-title">{{ game.name }}</h1>
-                <p class="post-subtitle">Added by: {{ game.user.username }}</p>
-            </div>
-            <div class="col-md-6 masthead-image d-none d-md-block">
-                <img src="{% static 'images/game.jpg' %}" class="scale" alt="{{ game.name }}">
-            </div>
-        </div>
+<!-- Masthead -->
+<div class="masthead mb-4">
+    <h1>{{ game.name }}</h1>
+    <p>Added by: {{ game.user.username }}</p>
+</div>
+
+<!-- Game Info -->
+<div class="card mb-4">
+    <div class="card-body">
+        <p>
+            <strong>Genre:</strong> {{ game.get_genre_display }}<br>
+            <strong>Platform:</strong> {{ game.get_platform_of_choice_display }}<br>
+            <strong>Status:</strong> {{ game.get_current_status_display }}<br>
+            <strong>Release Year:</strong> {{ game.release_year|default:"N/A" }}<br>
+            <strong>Hours Played:</strong> {{ game.hours_played }}
+        </p>
     </div>
 </div>
 
-<!-- Game Details -->
-<div class="container">
-    <div class="row">
-        <div class="col card mb-4 mt-3 left top">
-            <div class="card-body">
-
-                <p class="card-text">
-                    <strong>Genre:</strong> {{ game.get_genre_display }}<br>
-                    <strong>Platform:</strong> {{ game.get_platform_of_choice_display }}<br>
-                    <strong>Status:</strong> {{ game.get_current_status_display }}<br>
-                    <strong>Release Year:</strong> {{ game.release_year|default:"N/A" }}<br>
-                    <strong>Hours Played:</strong> {{ game.hours_played }}<br>
-                </p>
-
-                <hr>
-
-                <!-- Displaying count of comments -->
-                <div class="row">
-                    <div class="col-12">
-                        <strong class="text-secondary">
-                            <i class="far fa-comments"></i> {{ comment_count }}
-                        </strong>
-                    </div>
-                    <div class="col-12">
-                        <hr>
-                    </div>
-                </div>
-
-                <!-- Displaying Comments -->
-                <div class="row">
-                    <div class="col-md-8 card mb-4 mt-3">
-                        <h3>Comments:</h3>
-                        <div class="card-body">
-                            {% for comment in comments %}
-                            <div class="p-2 comments">
-                                <p class="font-weight-bold">
-                                    {{ comment.user.username }}
-                                    <span class="font-weight-normal">{{ comment.created_at }}</span> wrote:
-                                </p>
-                                <div id="comment{{ comment.id }}">
-                                    {{ comment.body|linebreaks }}
-                                </div>
-                            </div>
-                            {% empty %}
-                                <p>You have not written any notes for this game yet.</p>
-                            {% endfor %}
-                        </div>
-                    </div>
-                     <!-- Creating New Comments -->
-    <div class="col-md-4 card mb-4 mt-3">
-      <div class="card-body">
-        {% if user.is_authenticated %}
-        <h3>Leave a comment:</h3>
-        <p>Posting as: {{ user.username }}</p>
-        <form id="commentForm" method="post"
-          style="margin-top: 1.3em;">
-          {{ comment_form | crispy }}
-          {% csrf_token %}
-          <button id="submitButton" type="submit"
-            class="btn btn-signup btn-lg">Submit</button>
+<!-- Add Note Form -->
+<div class="card mb-4">
+    <div class="card-body">
+        <h4>Add a Note</h4>
+        <form method="POST">
+            {% csrf_token %}
+            {{ comment_form|crispy }}
+            <button type="submit" class="btn btn-primary">Add Note</button>
         </form>
-        {% else %}
-        <p>Log in to leave a comment</p>
-        {% endif %}
-      </div>
     </div>
+</div>
+
+<!-- Display Notes -->
+<div class="card">
+    <div class="card-body">
+        <h4>Your Notes ({{ comment_count }})</h4>
+        {% if comments %}
+            {% for comment in comments %}
+                <div class="mb-2 p-2 border rounded">
+                    <small class="text-muted">{{ comment.created_at }}</small>
+                    <p>{{ comment.body }}</p>
                 </div>
+            {% endfor %}
+        {% else %}
+            <p>You have not added any notes for this game yet.</p>
+        {% endif %}
+    </div>
+</div>
 
-            </div> <!-- end card-body -->
-        </div> <!-- end card -->
-    </div> <!-- end row -->
-</div> <!-- end container -->
-
-{% endblock content %}
-
-
-
+{% endblock %}
