checking something with add games form

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                         {% endif %}
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Add Game</a>
+                            <a class="nav-link" href="#"></a>
                         </li>
                     </ul>
 
