--- a/game/templates/game/add_game.html
+++ b/game/templates/game/add_game.html
@@ -1,4 +1,61 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en" class="h-100">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add a New Game</title>
+
+    
+</head>
+<body class="d-flex flex-column h-100">
+
+    <header>
+       
+    </header>
+
+    <main role="main" class="flex-shrink-0 container mt-4">
+        <h2>Add a New Game</h2>
+
+        <form method="POST">
+            <input type="hidden" name="csrfmiddlewaretoken" value="SOME_TOKEN_HERE">
+
+           
+            <div class="form-group">
+                <label for="id_title">Title</label>
+                <input class="form-control" id="id_title" name="title" type="text">
+            </div>
+
+            <div class="form-group">
+                <label for="id_genre">Genre</label>
+                <input class="form-control" id="id_genre" name="genre" type="text">
+            </div>
+
+            
+
+            <button type="submit" class="btn btn-primary">Add Game</button>
+        </form>
+    </main>
+
+    <footer>
+        
+    </footer>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--{% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -10,3 +67,4 @@
     <button type="submit" class="btn btn-primary">Add Game</button>
 </form>
 {% endblock %}
+-->
